# labl-utils

./: .gitignore  INSTRUCTIONS.md  README.md  pyproject.toml
cli/: add_word_freqs.py  assign_interview_type.py  assign_roles.py  get_interview_type.py  structure_transcripts.py
data/: frequency.py  langs.py
examples/: specificity.py
features/: determine_language.py  freq.py  tagging.py
src/labl/: __init__.py  frequency.py  specificity.py  transcripts.py
src/labl/cli/: __init__.py  assign_interview_type.py  assign_roles.py  structure_transcripts.py
src/labl/data/: __init__.py  langs.py  load_freq.py
src/labl/examples/: __init__.py  specificity.py
src/labl/features/: determine_language.py  tagging.py
utils/: combine_data.py  determine_language.py  frequency.py  transcript_utils.py  transcripts.py
