[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labl-utils"
version = "0.2.0"
description = "Utilities for structuring and parsing transcripts for lab work"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Benjamin Dixon"}
]

dependencies = [
    "polars",
    "stanza",
    "rich",
    "spacy"
]

[project.optional-dependencies]
cli = ["vllm"]
dev = ["pytest", "black", "flake8"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["labl*"]